--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,8 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav me-auto">
           <li class="nav-item"><a class="nav-link" href="{{ url_for('public.public_roster') }}">Roster</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('public.public_ac_progress') }}">AC Progress</a>
+          </li>
           {% if is_staff %}
           <li class="nav-item"><a class="nav-link" href="{{ url_for('members.dashboard') }}">Dashboard</a></li>
           <li class="nav-item"><a class="nav-link" href="{{ url_for('members.members') }}">Manage</a></li>
@@ -54,7 +56,7 @@
 
   <footer class="bg-custom-purple text-center">
     <div class="container">
-      <small>&copy; 2025 Taskforce System</small>
+      <small>&copy; 2025 Taskforce System Designed and Developed by General Slater & Chief General Swift</small>
     </div>
   </footer>
 
